# malloc

./: CMakeLists.txt  Makefile  a.out  main.c  stress  stress_test.c
inc/: allocation.h  debug.h  define.h  display.h  globals.h  intern_allocator.h  libft.h  list.h  macro.h  malloc.h  maskmanipulation.h  mymalloc.h  page.h  printf_ft.h  resetMalloc.h  size.h  testUtils.h  type.h  zone_management.h
legacy_src/: allocation.c  malloc.c  myfree.c  page_indexation.c  realloc.c  show_alloc_mem.c
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdup.c  ft_memmove.c  ft_memset.c  ft_memset_schema.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  (+7 more)
printf/: ft_print_param.c  ft_printf.c
src/: allocation.c  chunk.c  chunk_info.c  display.c  init.c  main.c  malloc.c  mask.c  myfree.c  mymalloc.c  page_indexation.c  realloc.c  show_alloc_mem.c  size_alloc.c
src/allocator/: large_allocator.c  medium_allocator.c  setup_zone.c  tiny_allocator.c
src/display/: display_arena.c  display_free.c  show_alloc_mem.c
src/header/: mask_manipulation.c
src/page/: indexation.c  list.c  maping.c
tests/: allignement.c  basic.c  chunk.c  chunk_info.c  init.c  large.c  malloc.c  mask.c  microtest.c  mmap.c  myfree.c  realloc.c  show.c
tools/: install_catch.sh  list_sources.sh  pre-commit  pre-commit-tester-installer.sh
touching/: allignement.c  malloc.c  myfree.c
